Name:                kure
Version:             1.2.1
Synopsis:            Combinators for Strategic Programming
Description:	     KURE is a DSL for building rewriting DSLs.
	 	     KURE shares combinator names and concepts with Stratego, but unlike Stratego, KURE is strongly typed.
		     KURE is similar to Strafunski, but has a lightweight generic traversal mechanism using type families
		     rather than SYB.

Category:            Language
License:             BSD3
License-file:        LICENSE
Author:              Andy Gill and Neil Sculthorpe
Maintainer:          Neil Sculthorpe <neil@ittc.ku.edu>
Copyright:           (c) 2006-2012 The University of Kansas
Homepage:            http://www.ittc.ku.edu/csdl/fpg/Tools/KURE
Stability:	     alpha
build-type: 	     Simple
Cabal-Version:       >= 1.6
Extra-Source-Files:
    examples/fib/Fib.hs
    examples/fib/FibKure.hs
    examples/fib/FibExamples.hs
    examples/exp/Exp.hs
    examples/exp/ExpKure.hs
    examples/exp/ExpExamples.hs

Library
  Build-Depends: base >= 4.2
  Ghc-Options:     -O2
  Exposed-modules:
       Language.KURE
       Language.KURE.Translate
       Language.KURE.Term
       Language.KURE.Utilities

  Ghc-Options:  -Wall

Flag all
  Description: Enable full development tree
  Default:     False




