Name:                kure
Version:             1.8.5
Synopsis:            Combinators for Strategic Programming
Description:	     KURE is a DSL for building rewriting DSLs.
	 	     KURE shares concepts with Stratego, but unlike Stratego, KURE is strongly typed.
		     KURE is similar to Strafunski, but has a lightweight generic traversal mechanism using type families
		     rather than SYB.

Category:            Language
License:             BSD3
License-file:        LICENSE
Author:              Neil Sculthorpe and Andy Gill
Maintainer:          Neil Sculthorpe <neil@ittc.ku.edu>
Copyright:           (c) 2006-2012 The University of Kansas
Homepage:            http://www.ittc.ku.edu/csdl/fpg/Tools/KURE
Stability:	     alpha
build-type: 	     Simple
Cabal-Version:       >= 1.6
Extra-Source-Files:
    examples/Examples.hs
    examples/Fib/Fib.hs
    examples/Fib/FibKure.hs
    examples/Fib/FibExamples.hs
    examples/Lam/Lam.hs
    examples/Lam/LamKure.hs
    examples/Lam/LamExamples.hs
    examples/Expr/Expr.hs
    examples/Expr/ExprKure.hs
    examples/Expr/ExprExamples.hs

Library
  Build-Depends: base >= 4.2
  Ghc-Options:     -O2
  Exposed-modules:
       Language.KURE
       Language.KURE.Combinators
       Language.KURE.Translate
       Language.KURE.Injection
       Language.KURE.Walker
       Language.KURE.Utilities

  Ghc-Options:  -Wall

Flag all
  Description: Enable full development tree
  Default:     False




